# mini-warehouse

./: .env  Cargo.toml  run_seeder.sh
migrations/: 20260114073147_create_users_table.down.sql  20260114073147_create_users_table.up.sql  20260114074141_create_roles_table.up.sql  20260114074256_create_user_role_table.down.sql  20260114074256_create_user_role_table.up.sql  20260114075459_create_warehouses_table.up.sql
seeders/: insert_default_roles.sql  insert_sample_users.sql
src/: main.rs
src/configs/: db.rs  mod.rs  security.rs
src/handlers/: auth.rs  health.rs
src/models/: mod.rs  role.rs  user.rs  user_role.rs
src/repositories/: user_repository.rs
src/routes/: mod.rs
src/utils/: response.rs
