[package]
name = "mini-warehouse-wms"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
jsonwebtoken = { version = "9", default-features = false, features = [
  "use_pem",
] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
] }
urlencoding = "2.1"
